2010-10-24  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/CiscoWLC.pm: new discovery module

	* NEWS: Release 1.0.9

2010-10-12  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/CGI.pm: New URL parameter: 'v' is a synonym for 'view'

2010-10-06  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* templates/html-incblocks.txt: 'cssoverlay' now must point to
	an absolute URL

2010-09-23  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/CiscoIOS.pm (checkdevtype):
	New discovery parameter: CiscoIOS::enable-unrouted-vlan-interfaces

2010-09-20  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/Jacarta.pm:
	New discovery module for Jacarta iMeter (thanks to Roman Hochuli)

2010-09-17  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Collector/SNMP.pm (initCollectorGlobals):
	Refresh the SNMP maps after a configuration re-compile

2010-08-31  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* performance optimizations: XML compiler runs 15-20% faster 

2010-08-16  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm:
	Selector actions split: discards moved from NoErrorCounters to
	NoDiscardCounters;
	and from InErrorsMonitor/OutErrorsMonitor to
	InDiscardsMonitor/OutDiscardsMonitor

	* perllib/Torrus/Collector.pm: collector_tokens database now depends
	on DS configuration instance

2010-08-13  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/CGI.pm: Added host-based authentication

2010-08-09  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* Updated discovery modules for Net::SNMP 6.0.0 compatibility

2010-08-03  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* init.d/torrus.in: bugfix in RHEL compatibility.
	Do "chkconfig --del torrus", install the new version into /etc/init.d,